<resources>
    <string name="app_name">Are We There Yet yanshiy1</string>
    <string name="dummy">Dummy</string>
    <string name="provider">Provider:&#160;</string>
    <string name="latitude">Latitude:&#160;</string>
    <string name="longitude">Longitude:&#160;</string>
    <string name="newLoc">New Location</string>
    <string name="newButton">New</string>
    <string name="eb2250">2250 Engineering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="textRadio">Transportation:</string>
    <string name="selectDriving">driving</string>
    <string name="selectWalking">walking</string>
    <string name="selectBicycling">bicycling</string>
    <string name="ok">OK</string>
</resources>